# address-book-app

./: CMakeLists.txt  README  README.click  README.md  address-book-app.wrapper  address-book-apparmor.json  clickable.json  config.h.in  manifest.json  snapcraft.yaml
click/: CMakeLists.txt  address-book-apparmor.json  address-book-content.json  manifest.json.in
data/: CMakeLists.txt  address-book-app.application  address-book-app.desktop.in  address-book-app.desktop.in.in  address-book-app.url-dispatcher
src/app/: AddressBookApp.xml  CMakeLists.txt  addressbookapp.cpp  addressbookapp.h  addressbookappdbus.cpp  addressbookappdbus.h  buteo-import.cpp  buteo-import.h  com.canonical.AddressBookApp.service.in  contentcommunicator.cpp  contentcommunicator.h  imagescalethread.cpp  imagescalethread.h  main.cpp
src/artwork/: CMakeLists.txt
src/imports/: ABAdaptivePageLayout.qml  ABContactEditorPage.qml  ABContactEditorPageWithEmptyContact.qml  ABContactListPage.qml  ABContactViewPage.qml  ABEmptyState.qml  ABMultiColumnEmptyState.qml  ABNewContactBottomEdge.qml  BottomEdge.qml  BusyImportingDialog.qml  ButeoImportDialog.qml  CMakeLists.txt  ContactEditor.qml  ContactList.js  ContactList.qml  ContactSettings.qml  ContentHubProxy.qml  KeyboardRectangle.qml  MainWindow.qml  RemoveContactsDialog.qml  VCardImportDialog.qml  main.qml
src/imports/Common/: CMakeLists.txt  ContactDetailBase.qml  ContactDetailGroupBase.qml  ContactDetailGroupWithTypeBase.qml  ContactDetailItem.qml  ContactDetailOnlineAccountTypeModel.qml  ContactDetailPhoneNumberTypeModel.qml  ContactExporter.qml  RemoveContactsDialog.qml
src/imports/Components/: CMakeLists.txt  OrganicView.qml
src/imports/ContactEdit/: AddFieldDialog.qml  AvatarImport.qml  CMakeLists.txt  ComboButtonAddField.qml  Combobox.qml  ContactDetailAddressesEditor.qml  ContactDetailAvatarEditor.qml  ContactDetailEmailsEditor.qml  ContactDetailGroupWithTypeEditor.qml  ContactDetailNameEditor.qml  ContactDetailOnlineAccountsEditor.qml  ContactDetailOrganizationsEditor.qml  ContactDetailPhoneNumbersEditor.qml  ContactDetailSyncTargetEditor.qml  ContactDetailWithTypeEditor.qml  ContactEditor.qml  ContactFetchError.qml  EditToolbar.qml  KeyboardRectangle.qml  StandardAnimation.qml  TextInputDetail.qml  ValueSelector.qml
src/imports/ContactList/: CMakeLists.txt  ContactExporter.qml  ContactList.qml  ContactListPage.qml  FavoriteList.qml  OnlineAccountsMessage.qml  PageWithBottomEdge.qml  VCardImportDialog.qml
src/imports/ContactShare/: CMakeLists.txt  ContactSharePage.qml
src/imports/ContactView/: ActionButton.qml  BasicFieldView.qml  CMakeLists.txt  Combobox.qml  ContactDetailAddress.qml  ContactDetailAddressView.qml  ContactDetailAddressesView.qml  ContactDetailAddressessView.qml  ContactDetailAvatar.qml  ContactDetailAvatarView.qml  ContactDetailEditor.qml  ContactDetailEditorText.qml  ContactDetailEditorWithAction.qml  ContactDetailEmails.qml  ContactDetailEmailsView.qml  ContactDetailFavorite.qml  ContactDetailFavoriteView.qml  ContactDetailGroup.qml  ContactDetailGroupBase.qml  ContactDetailGroupWithAction.qml  ContactDetailGroupWithTypeView.qml  ContactDetailItem.qml  ContactDetailMultilineWithTypeView.qml  ContactDetailName.qml  ContactDetailNameView.qml  ContactDetailOnlineAccounts.qml  ContactDetailOnlineAccountsView.qml  ContactDetailOrganizationsView.qml  ContactDetailPhoneNumberView.qml  ContactDetailPhoneNumbers.qml  ContactDetailPhoneNumbersView.qml  ContactDetailSyncTargetView.qml  ContactDetailView.qml  ContactDetailViewText.qml  ContactDetailViewWithAction.qml  ContactDetailWithTypeView.qml  ContactEditor.qml  ContactFetch.qml  ContactFetchError.qml  ContactHeader.qml  (+4 more)
src/imports/Settings/: CMakeLists.txt  MyselfPhoneNumbersModel.qml  SettingsDefaultSyncTarget.qml  SettingsPage.qml
src/imports/Ubuntu/: CMakeLists.txt
src/imports/Ubuntu/AddressBook/: CMakeLists.txt
src/imports/Ubuntu/Contacts/: ActionButton.qml  BasicFieldView.qml  CMakeLists.txt  ContactAvatar.qml  ContactDelegate.qml  ContactDetailAddressesView.qml  ContactDetailAvatarView.qml  ContactDetailBase.qml  ContactDetailEmailsView.qml  ContactDetailGroupBase.qml  ContactDetailGroupWithTypeBase.qml  ContactDetailGroupWithTypeView.qml  ContactDetailOnlineAccountTypeModel.qml  ContactDetailOnlineAccountsView.qml  ContactDetailOrganizationsView.qml  ContactDetailPhoneNumberTypeModel.qml  ContactDetailPhoneNumberView.qml  ContactDetailPhoneNumbersView.qml  ContactDetailPickerDelegate.qml  ContactDetailPickerPhoneNumberDelegate.qml  ContactDetailWithTypeView.qml  ContactFavoriteDelegate.qml  ContactFavoriteListView.qml  ContactFetch.qml  ContactImportPage.qml  ContactList.js  ContactListButtonDelegate.qml  ContactListModel.qml  ContactListView.qml  ContactPreviewPage.qml  ContactSearchListView.qml  ContactSimpleListView.qml  Contacts.js  DialogButtons.qml  FastScroll.js  FastScroll.qml  FavoriteDelegate.qml  ListItemWithActions.qml  ListItemWithActionsCheckBox.qml  MostCalledList.qml  (+26 more)
tests/autopilot/: CMakeLists.txt
tests/autopilot/address_book_app/: __init__.py  data.py  helpers.py  test_create_new_from_uri.py
tests/autopilot/address_book_app/address_book/: __init__.py  _common.py  _contact_editor_page.py  _contact_view_page.py  _errors.py  _remove_contact_dialog.py  _sim_card_import_page.py  data.py
tests/autopilot/address_book_app/emulators/: contact_list_page.py  main_window.py  page_with_bottom_edge.py  toolbar.py
tests/autopilot/address_book_app/pages/: __init__.py  _ab_contact_editor_page.py  _ab_contact_list_page.py  _ab_contact_view_page.py  _common.py  _contact_editor.py  _contact_editor_page.py  _contact_list_page.py  _contact_view.py  _contact_view_page.py  _sim_card_import_page.py
tests/autopilot/address_book_app/tests/: __init__.py  test_add_contact.py  test_contactlist.py  test_create_new_from_uri.py  test_custom_proxy_objects.py  test_data.py  test_delete_contact.py  test_edit_contact.py  (+7 more)
tests/unittest/: CMakeLists.txt  tst-buteo-import-no-accounts.cpp  tst-buteo-import.cpp
tests/unittest/mock/: mock-buteo.py  mock-galera.py
(+195 files in other folders)
