set(ADDRESS_BOOK_APP_ARTWORK
    address-book-app.svg
    address-book-app-splash.svg
    address-book-app-symbolic.svg
    address-book-app-preview.png
    birthday-cake.svg
    import-image.svg
    protocol-aim.svg
    protocol-facebook.svg
    protocol-icq.svg
    protocol-jabber.svg
    protocol-msn.svg
    protocol-other.svg
    protocol-qq.svg
    protocol-skype.svg
    protocol-twitter.svg
    protocol-yahoo.svg
)

install(FILES ${ADDRESS_BOOK_APP_ARTWORK}
    DESTINATION ${ADDRESS_BOOK_APP_DIR}/artwork
)
